--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "dayjs": "^1.11.10",
     "firebase": "^10.4.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
