--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "vite build",
     "serve": "vite preview",
     "test": "vitest --ui",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "cy:open": "cypress open"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -28,6 +29,7 @@
     "@vitest/coverage-c8": "^0.33.0",
     "@vitest/ui": "^0.34.3",
     "c8": "^8.0.1",
+    "cypress": "^13.3.3",
     "jsdom": "^22.1.0",
     "vite": "^4.4.9",
     "vitest": "^0.34.3"
