--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "c8": "^8.0.1",
     "cypress": "^13.3.3",
     "jsdom": "^22.1.0",
+    "start-server-and-test": "^2.0.1",
     "vite": "^4.4.9",
     "vitest": "^0.34.3"
   }
